# Archery_answers

./: .gitignore  Procfile  README.md  db.sqlite3  procfile  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: create_admin.py
accounts/migrations/: 0001_initial.py
builder/: admin.py  forms.py  models.py  urls.py  views.py
builder/migrations/: 0001_initial.py
calculator/: admin.py  models.py  urls.py  views.py
calculator/management/commands/: seed_thresholds.py
calculator/migrations/: 0001_initial.py
components/: admin.py  forms.py  models.py  urls.py  views.py
components/migrations/: 0001_initial.py
core/: settings.py  urls.py
static/css/: style.css
static/js/: main.js
templates/: base.html  home.html
templates/accounts/: login.html  register.html
templates/builder/: create_bow.html  create_build.html  home.html
templates/components/: submit.html
