[project]
name = "archery-answers"
version = "0.1.0"
description = "One stop shop for archery arrow builders to see speeds, KE and momentum"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-htmx>=1.27.0",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.12.0",
]
